Finished number generator

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Number Generator</title>
+    <title>Random Number Generator (1-10)</title>
     <script
       src="https://kit.fontawesome.com/1935d064dd.js"
       crossorigin="anonymous"
@@ -20,7 +20,18 @@
           <div class="buttons">
             <button class="reset generate">
               <i class="fas fa-spinner">
-                Generate
+                Generate 1-10
+              </i>
+            </button>
+            <button class="second ">
+              <i class="fas fa-spinner">
+                Generate 1-100
+              </i>
+            </button>
+          
+            <button class="third ">
+              <i class="fas fa-spinner">
+                Generate 1-1000
               </i>
             </button>
           
